fixed some spacing issues

--- a/css/rehack.webflow.css
+++ b/css/rehack.webflow.css
@@ -2141,7 +2141,7 @@ a {
   margin-top: 0px;
   margin-bottom: 20px;
   margin-left: 0px;
-  padding: 50px 10vh 50px 10vw;
+  padding: 50px 10vh 50px 7vw;
   clear: none;
 }
 
@@ -2320,7 +2320,7 @@ a {
   font-size: 7.5vh;
   line-height: 9vh;
   font-weight: 700;
-  text-align: left;
+  text-align: center;
 }
 
 .container-6 {
@@ -2663,7 +2663,7 @@ a {
 
 .faq-heading {
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   padding-right: 10px;
   padding-left: 3px;
   -webkit-align-self: center;
@@ -2675,7 +2675,7 @@ a {
   font-size: 7.5vh;
   line-height: 9vh;
   font-weight: 700;
-  text-align: left;
+  text-align: center;
 }
 
 .link-3 {
